feat generated docs
